# DataTrustProtocol

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/attestation/: Cargo.toml
pallets/attestation/src/: lib.rs
pallets/did/: Cargo.toml
pallets/did/src/: benchmarking.rs  did_attributes.rs  lib.rs  mock.rs
pallets/vcs/: Cargo.toml
pallets/vcs/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
