[package]
name = 'pallet-vcs'
version = '4.0.0-dev'
description = 'FRAME pallet for defining custom did logic.'
authors = ['lsroudi@gmail.com El akroudi Abdessamad']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"]}
frame-support = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-system = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
sp-core = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-runtime = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate"}

frame-benchmarking = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
pallet-balances = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
sp-keystore = {branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
syn = { version = "=1.0.82" }
[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-keystore/std",
  "sp-runtime/std",
  "sp-std/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]